# goober

./: .clang-format  .clang-tidy  CMakeLists.txt  COPYING.md  README.md
.github/workflows/: main.yml
examples/: CMakeLists.txt
examples/sdl2_opengl2/: CMakeLists.txt  main.cc
examples/sdl2_opengl3/: CMakeLists.txt  main.cc
include/: array.hh  core.hh  goober.h  goober.hh
include/goober/: array.hh  core.hh  draw.hh  font.hh  forward.hh  goober.hh  keyboard.hh  mouse.hh  widgets.hh
src/: context.h  core.cc  draw.cc  font.cc  goober.cc  mouse.cc  widgets.cc
test/: CMakeLists.txt  main.cc  test_array.cc  test_core.cc  test_drawlist.cc  test_mouse.cc
tools/: CMakeLists.txt  make_header.cc
